middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rewrite-spring-boot
  namespace: movie-app
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /spring-boot
